--- a/game.html
+++ b/game.html
@@ -12,12 +12,12 @@ p.A {
   color: #ffff00;
 }
 p.B {
-  padding-left: 50%;
+  text-align: center;
   color: #900000;
 }
 
 p.C {
-  padding-left: 50%;
+  text-align: center;
   color: #900000;
 }
 
