--- a/Game2.html
+++ b/Game2.html
@@ -1,1 +1,4 @@
 Under Construction
+
+-->Character<--
+http://shop.momath.org/media/catalog/product/cache/1/image/650x650/9df78eab33525d08d6e5fb8d27136e95/i/m/image_1358.jpg
