--- a/Game2.html
+++ b/Game2.html
@@ -1,4 +1,10 @@
 Under Construction
+<svg id="CC">
+  <clipPath id="circle">
+    <circle cx="25" cy="25" r="25" />
+  </clipPath>
 
+  <image x="-25" y="-25" xlink:href="http://shop.momath.org/media/catalog/product/cache/1/image/650x650/9df78eab33525d08d6e5fb8d27136e95/i/m/image_1358.jpg" height="50" width="50" clip-path="url(#circle)" ></image>
+</svg>
 -->Character<--
 http://shop.momath.org/media/catalog/product/cache/1/image/650x650/9df78eab33525d08d6e5fb8d27136e95/i/m/image_1358.jpg
