--- a/Game2.html
+++ b/Game2.html
@@ -1,10 +1,28 @@
-Under Construction
+<html>
+<head>
+  <title>Anera</title>
+  <script>
+    var YAxis = 0;
+    var XAxis = 0;
+  </script>
+  <style>
+    svg#CC{
+      z-index: 5;
+      display: table;
+      margin-left: -50px;
+      margin-top: -50px;
+      position: absolute;
+      top: 0%;
+      left: YAxis%;
+    }
+  </style>
+</head>
+<body>
 <svg id="CC">
   <clipPath id="circle">
     <circle cx="25" cy="25" r="25" />
   </clipPath>
-
-  <image x="8.3" y="8.3" xlink:href="http://shop.momath.org/media/catalog/product/cache/1/image/650x650/9df78eab33525d08d6e5fb8d27136e95/i/m/image_1358.jpg" height="50" width="50" clip-path="url(#circle)" ></image>
+  <image x="0" y="0" xlink:href="http://shop.momath.org/media/catalog/product/cache/1/image/650x650/9df78eab33525d08d6e5fb8d27136e95/i/m/image_1358.jpg" height="50" width="50" clip-path="url(#circle)" ></image>
 </svg>
--->Character<--
-http://shop.momath.org/media/catalog/product/cache/1/image/650x650/9df78eab33525d08d6e5fb8d27136e95/i/m/image_1358.jpg
+</body>
+</html>
