--- a/Game2.html
+++ b/Game2.html
@@ -13,7 +13,7 @@
       margin-top: -50px;
       position: absolute;
       top: 0%;
-      left: YAxis%;
+      left: 0%;
     }
   </style>
 </head>
