--- a/Game2.html
+++ b/Game2.html
@@ -2,8 +2,8 @@
 <head>
   <title>Anera</title>
   <script>
-    var YAxis = 0;
-    var XAxis = 0;
+    var YAxis = 10;
+    var XAxis = 10;
   </script>
   <style>
     svg#CC{
@@ -12,8 +12,8 @@
       margin-left: -25px;
       margin-top: -25px;
       position: absolute;
-      top: 10%;
-      left: 10%;
+      top: XAxis%;
+      left: YAxis%;
     }
   </style>
 </head>
