--- a/game3.html
+++ b/game3.html
@@ -10,7 +10,7 @@
 		"http://www.w3.org/TR/html4/loose.dtd">
 <html itemscope itemtype="http://schema.org/" lang="en">
 	<head>
-		<title>HelloRun&trade;</title>
+		<title>CustomHelloRun[Aden Xin]</title>
 		<meta charset="utf-8">
 
 		<!-- Google + -->
@@ -21,33 +21,12 @@
         <link rel="image_src" href="http://hellorun.helloenjoy.com/assets/2d/image_square.jpg"/>
 		<link rel="shortcut icon" href="http://hellorun.helloenjoy.com/assets/2d/icon.png"/>
 
-		<!-- Twitter -->
-		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="HelloRun™">
-		<meta name="twitter:site" content="@helloenjoy">
-		<meta name="twitter:image" content="http://hellorun.helloenjoy.com/assets/2d/image_hd.jpg">
-		<meta name="twitter:description" content="An HTML5 game by HelloEnjoy with music by Du Tonc.">
-
-		<!-- Facebook -->
-	    <meta property="og:type" content="website">
-        <meta property="og:title" content="HelloRun™" />
-        <meta property="og:description" content="An HTML5 game by HelloEnjoy with music by Du Tonc." />
-        <meta property="og:image" content="http://hellorun.helloenjoy.com/assets/2d/image_hd.jpg" />
-		<meta property="article:publisher" content="https://www.facebook.com/HelloEnjoy" />
-
 		<!-- Web App -->
 		<meta name="mobile-web-app-capable" content="yes">
 		<link rel="shortcut icon" sizes="196x196" href="app/web_app/icon_196.png">
 		<link rel="shortcut icon" sizes="128x128" href="app/web_app/icon_128.png">
 		<link rel="apple-touch-icon" sizes="128x128" href="app/web_app/icon_128.png">
 		<link rel="apple-touch-icon-precomposed" sizes="128x128" href="app/web_app/icon_128.png">
-
-		<!-- Mobile -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-		<!-- CSS -->
-		<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
-	</head>
 
 	<body>
 		<canvas id="canvas3d" width="0" height="0"></canvas>
@@ -65,9 +44,9 @@
 		<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
 
 		<!-- HelloRun -->
-		<script type="text/javascript" src="js/three.min.js"></script>
-		<script type="text/javascript" src="js/leap.min.js"></script>
-		<script type="text/javascript" src="js/hellorun.min.js"></script>
+		<script type="text/javascript" src="1.js"></script>
+		<script type="text/javascript" src="2.js"></script>
+		<script type="text/javascript" src="3.js"></script>
 
 		<!-- GUI -->
 		<span id="desktop-css" class="gui_desktop"></span>
