--- a/Game2.html
+++ b/Game2.html
@@ -19,8 +19,8 @@
       margin-left: -25px;
       margin-top: -25px;
       position: absolute;
-      top: GetX()%;
-      left: YGetY()%;
+      top: 10%;
+      left: 10%;
     }
   </style>
 </head>
@@ -29,7 +29,7 @@
   <clipPath id="circle">
     <circle cx="25" cy="25" r="25" />
   </clipPath>
-  <image x="0" y="0" xlink:href="http://shop.momath.org/media/catalog/product/cache/1/image/650x650/9df78eab33525d08d6e5fb8d27136e95/i/m/image_1358.jpg" height="50" width="50" clip-path="url(#circle)" ></image>
+  <image x="GetX" y="GetY" xlink:href="http://shop.momath.org/media/catalog/product/cache/1/image/650x650/9df78eab33525d08d6e5fb8d27136e95/i/m/image_1358.jpg" height="50" width="50" clip-path="url(#circle)" ></image>
 </svg>
 </body>
 </html>
