--- a/block.html
+++ b/block.html
@@ -110,9 +110,7 @@ function openSessionInNewWindow()
 <body bgcolor="f0f0f0" topmargin="0" onload="javascript:displaySections();">
 <center>
   <table cellpadding="0" cellspacing="0" width="700" bgcolor="#FFFFFF">
-    <tbody><tr>
-      <td><img src="./Page Restricted_files/top.gif"></td>
-    </tr>
+    <tbody>
     
     <tr>
       <td height="130" align="left"><table cellpadding="0" cellspacing="0" width="100%" align="left">
@@ -167,20 +165,11 @@ function openSessionInNewWindow()
             <td width="5%">&nbsp;</td>
           </tr>
           <tr>
-            <td align="center" height="240" colspan="100%"><img src="./Page Restricted_files/block.gif"></td>
+            <td align="center" height="240" colspan="100%"></td>
           </tr>
         </tbody></table></td>
     </tr>
-    <tr>
-      <td><table width="100%" cellspacing="0" cellpadding="0">
-          <tbody><tr>
-            <td width="100%" align="center"><span id="loginDifferentUser"><a href="javascript:openSessionInNewWindow();" onclick="openSessionInNewWindow();this.blur();return false;" class="button"><img src="./Page Restricted_files/login.gif" border="0"></a></span></td>
-          </tr>
-          <tr>
-            <td height="15" colspan="100%"></td>
-          </tr>
-        </tbody></table></td>
-    </tr>
+    
     <form action="" method="POST"></form>
       <input type="hidden" name="button">
                             <input type="hidden" name="fullUrl">
@@ -233,6 +222,7 @@ function openSessionInNewWindow()
     </tr>
   </tbody></table>
 </center>
+
 
 
 </body></html>
